fix spacing

--- a/src/styles/components/_footer.scss
+++ b/src/styles/components/_footer.scss
@@ -3,4 +3,6 @@
   width: 100vw;
   background-size: cover;
   background-repeat: no-repeat;
+  position: absolute;
+  bottom: 0;
 }
